--- a/ui/mammoth/macros/Cargo.toml
+++ b/ui/mammoth/macros/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "gabbycat-macros"
+name = "mammoth-macros"
 version = "0.1.0"
 authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
 
 [dependencies]
-gabbycat-macros-derive = { path = "derive" }
+mammoth-macros-derive = { path = "derive" }
