--- a/ui/mammoth/package.json
+++ b/ui/mammoth/package.json
@@ -4,8 +4,8 @@
     "build": "webpack -d --mode development",
     "start": "webpack-dev-server -d --mode development --watch",
     "docker-tmp": "mkdir -p tmp && rm -rf tmp/utils tmp/presenter && cp -r ../utils tmp && mkdir tmp/presenter && cp -r ../../presenter/src tmp/presenter && cp ../../presenter/Cargo.toml tmp/presenter",
-    "docker-build": "yarn docker-tmp && docker build -t gabbycat .; rm -rf tmp/utils tmp/presenter && rmdir --ignore-fail-on-non-empty tmp",
-    "docker-run": "docker run -p 8000:8000 -d -P gabbycat"
+    "docker-build": "yarn docker-tmp && docker build -t mammoth .; rm -rf tmp/utils tmp/presenter && rmdir --ignore-fail-on-non-empty tmp",
+    "docker-run": "docker run -p 8000:8000 -d -P mammoth"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.0.1",
