--- a/ui/utils/Cargo.toml
+++ b/ui/utils/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 
 [dependencies]
 lazy_static = "1.4.0"
-serde = "1.0.101"
+serde = { version = "1.0.101", features = ["derive"] }
 stdweb = "0.4.18"
+yew = "0.9.0"
