--- a/ui/wildcat/Cargo.toml
+++ b/ui/wildcat/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wildcat"
+name = "wildcat-ui"
 version = "0.1.0"
 authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
@@ -17,9 +17,9 @@ fluent = "0.7.1"
 lazy_static = "1.4.0"
 serde = { version = "1.0.101", features = ["derive"] }
 stdweb = "0.4.18"
-strum = "0.15.0"
-strum_macros = "0.15.0"
+strum = "0.16.0"
+strum_macros = "0.16.0"
 unic-langid = "0.4.2"
 wasm-bindgen = "=0.2.42"
 wildcat-macros = { path = "macros" }
-yew = { version = "0.9.0", git = "https://github.com/yewstack/yew" }
+yew = "0.9.0"
