--- a/ui/wildcat/Vagrantfile
+++ b/ui/wildcat/Vagrantfile
@@ -61,7 +61,7 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder ".", "/vagrant/wildcat", type: "rsync",
     rsync__exclude: [".git/", "node_modules/", "pkg/", "target/", "yarn.lock", "Cargo.lock"]
 
-  config.vm.synced_folder "../utils", "/vagrant/utils", type: "rsync"
+  config.vm.synced_folder "../shared", "/vagrant/shared", type: "rsync"
 
   # Automatically rsync transfer to running Vagrant when updates made locally
   config.trigger.after :up do |trigger|
