--- a/ui/wildcat/package.json
+++ b/ui/wildcat/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "build": "webpack -d --mode development",
     "start": "webpack-dev-server -d --mode development --watch",
-    "docker-tmp": "mkdir -p tmp && rm -rf tmp/utils tmp/presenter && cp -r ../utils tmp && mkdir tmp/presenter && cp -r ../../presenter/src tmp/presenter && cp ../../presenter/Cargo.toml tmp/presenter",
-    "docker-build": "yarn docker-tmp && docker build -t wildcat .; rm -rf tmp/utils tmp/presenter && rmdir --ignore-fail-on-non-empty tmp",
+    "docker-tmp": "mkdir -p tmp && rm -rf tmp/shared tmp/presenter && cp -r ../shared tmp && mkdir tmp/presenter && cp -r ../../presenter/src tmp/presenter && cp ../../presenter/Cargo.toml tmp/presenter",
+    "docker-build": "yarn docker-tmp && docker build -t wildcat .; rm -rf tmp/shared tmp/presenter && rmdir --ignore-fail-on-non-empty tmp",
     "docker-run": "docker run -p 8000:8000 -d -P wildcat"
   },
   "devDependencies": {
