--- a/ui/wildcat/Cargo.toml
+++ b/ui/wildcat/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0.101", features = ["derive"] }
 stdweb = "0.4.19"
 strum = "0.16.0"
 strum_macros = "0.16.0"
+titlecase = "0.10.0"
 unic-langid = { version = "0.5.2", features = ["macros"] }
 wasm-bindgen = "=0.2.42"
 wildcat-macros = { path = "macros" }
