Use wildcat proc macros and proc-quote

--- a/ui/wildcat/macros/Cargo.toml
+++ b/ui/wildcat/macros/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
 
 [dependencies]
-wildcat-macros-derive = { path = "derive" }
+wildcat-proc-macros = { path = "proc" }
