--- a/ui/wildcat/macros/proc/Cargo.toml
+++ b/ui/wildcat/macros/proc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "wildcat-macros-derive"
+name = "wildcat-proc-macros"
 version = "0.1.0"
 authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
@@ -8,5 +8,6 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
+proc-macro2 = "1.0.5"
+proc-quote = "0.3.0"
 syn = "1.0.5"
-quote = "1.0.2"
