--- a/ui/wildcat/package.json
+++ b/ui/wildcat/package.json
@@ -11,6 +11,7 @@
     "@wasm-tool/wasm-pack-plugin": "^1.0.1",
     "@webpack-blocks/core": "^2.0.0",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "html-beautify-webpack-plugin": "^1.0.5",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
