--- a/zomes/coolcats/code/Cargo.toml
+++ b/zomes/coolcats/code/Cargo.toml
@@ -5,17 +5,12 @@ authors = ["Michael Goldman <mike.goldman@allstreets.org>"]
 edition = "2018"
 
 [dependencies]
-hdk = "=0.0.30-alpha6"
-hdk-proc-macros = "=0.0.30-alpha6"
-holochain_json_derive = "=0.0.17"
-holochain_wasm_utils = "=0.0.30-alpha6"
-serde = { version = "=1.0.89", features = ["derive"] }
-serde_json = "1.0.39"
-
-[patch.crates-io]
-hdk = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.30-alpha6" }
-hdk-proc-macros = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.30-alpha6" }
-holochain_wasm_utils = { git = "https://github.com/holochain/holochain-rust", tag = "v0.0.30-alpha6" }
+hdk = "=0.0.49-alpha1"
+hdk_proc_macros = "=0.0.49-alpha1"
+holochain_json_derive = "0.0"
+holochain_wasm_utils = "=0.0.49-alpha1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0", features = ["preserve_order"] }
 
 [lib]
 crate-type = ["cdylib"]
